# oracle-database-code-samples

./: .gitignore  README.md  pom.xml
ai-vector-search/: README.md  pom.xml
database-per-service-example/: README.md  pom.xml
database-per-service-example/courses/: pom.xml
database-per-service-example/sample/: pom.xml
database-per-service-example/students/: pom.xml
golang/: README.md  go.mod
jdbc-event-streaming/: README.md  pom.xml
jms-producer-consumer/: README.md  pom.xml
migrate-kafka-to-oracle/: README.md  testuser.sql  transactional-messaging.md  using-oracle-json.md
news-event-streaming/: README.md  pom.xml
oracle-database-kafka-apis/: README.md  pom.xml
python-oracle/: README.md  pyproject.toml
python-oracle/src/python_oracle/testcontainers_sample/: README.md  oracle_database_container.py  testcontainers_sample.py
sessionless-transactions/: README.md  orders.sql  pom.xml
spring-boot-cdc/: README.md  pom.xml
spring-boot-dynamic-property-source/: README.md  pom.xml
spring-boot-jms-example/: README.md  pom.xml
spring-data-mongodb-oracle-api/: README.md  pom.xml
spring-jpa/: README.md  pom.xml
spring-resource-sample/: pom.xml
spring-vault-oracle-app/: pom.xml
sql/: README.md  insert_into_by_name.sql  json_transform.sql  select_ai.sql  similarity_search.sql
testcontainers/: README.md  pom.xml
txeventq-examples/: README.md  okafka.sql  ords.md  pom.xml  springjms.sql  txeventq.sql
typescript/: README.md  package-lock.json  package.json  tsconfig.json
vector-db-event-streaming/: README.md  pom.xml
(+198 files in other folders)
