[project]
name = "python-oracle"
version = "0.1.0"
description = ""
authors = [
    {name = "Anders Swanson",email = "anders.swanson@oracle.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "oracledb (>=3.3.0,<4.0.0)",
    "testcontainers (>=4.13.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "python_oracle", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
